# k8s-homelab

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  404.html  AGENTS.md  CNAME  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  renovate.json  renovate.json5
.aiassistant/rules/: flux.md  ingress.md  main.md
.github/: CODEOWNERS  renovate.json5
.github/workflows/: flux-schedule.yaml  mkdocs.yaml
.junie/: guidelines.md
ansible/: pyproject.toml  requirements.yaml
ansible/.devcontainer/: devcontainer.json
ansible/inventory/: hosts.yaml
ansible/playbooks/: longhorn-node-prereqs.yaml  setup-laptop.yaml  setup-os.yaml  setup-worker.yaml
ansible/playbooks/files/: sshd_config
ansible/playbooks/tasks/: longhorn-node-prereqs.yaml
apps/oauth2-proxy/: index.html
cert-manager/chart/: cert-manager-helm-release.yaml
default/: kustomization.yaml  qbittorrent.yaml
docs/: index.md  mkdocs.yml  pyproject.toml
docs/.devcontainer/: devcontainer.json
docs/cluster_setup/: installing_k3s.md  setting_up_flux.md  setting_up_raspberry_pi.md
docs/content/: CNAME
docs/content/_static/: custom.css
docs/content/apps/: oauth2-proxy.md
docs/content/cluster_setup/: setting_up_raspberry_pi.md
docs/content/miscellaneous/: cloudflare_ddns_not_working_with_openwrt.md  cloudflare_dns_challenge.md  metallb_not_working_raspberry_wifi.md  tips_and_tricks.md
docs/content/runbooks/: raspberry_pi_usb_ssd_boot.md
docs/miscellaneous/: cloudflare_port_forwarding_openwrt.md  enabling_WakeOnLan_on_NIC.md  tips_and_tricks.md
flux-system/: cluster-secrets.yaml  cluster-settings.yaml  cluster-vars.yaml  gotk-sync.yaml
flux-system-extras/: README.md
longhorn-system/: longhorn-helm-release.yaml
search/: search_index.json
(+384 files in other folders)
