[tool.poetry]
name = "k8s-homelab-ansible"
version = "0.1.0"
description = "ansible scripts for my k8s-homelab"
authors = ["Shady Fanous <sssfanous@gmail.com>"]
readme = "README.md"
packages = [{include = "k8s_homelab_ansible"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
